[package]
name = "heatmap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
glob = "0.3.1"
pcap-parser = "0.16.0"
pnet = "0.35.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
threadpool = "1.8.1"
tqdm = "0.7.0"
